package org.example.app.utils;

public final class Constants {

    public final static String WRONG_PHONE_MSG = "Wrong phone input.";
    public final static String WRONG_EMAIL_MSG = "Wrong email input.";
    public final static String WRONG_ID_MSG = "Wrong id input.";

    public final static String DATA_ABSENT_MSG = "\n>> No data!";
    public final static String DATA_INSERT_MSG = "\n>> Created.";
    public final static String DATA_UPDATE_MSG = "\n>> Updated.";
    public final static String DATA_DELETE_MSG = "\n>> Deleted.";

    public final static String APP_CLOSE_MSG = "\n>> App closed.";
    public final static String INPUT_REQ_MSG = "Input required.";
    public final static String INCORRECT_VALUE_MSG = ">> Incorrect value! Try again.";
    public final static String INCORRECT_OPTION_MSG = ">> Incorrect option! Try again.";
}
