package org.example.app.view;

public class UsersReadView {

    public void getOutput(String output) {
        System.out.println("\nDATA:\n" + output);
    }
}
